--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "lodash": "^4.17.21",
     "nuxt": "^2.15.8",
     "nuxt-svg-loader": "^1.2.0",
+    "nvm": "^0.0.4",
     "vee-validate": "^3.4.14",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
     "vuedraggable": "^2.24.3",
-    "webpack": "^4.46.0"
+    "webpack": "^4.46.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
