all page edited

--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "nuxt": "^2.15.8",
     "nuxt-svg-loader": "^1.2.0",
     "nvm": "^0.0.4",
+    "qrcode": "^1.5.4",
     "vee-validate": "^3.4.14",
     "vue": "^2.7.10",
+    "vue-qrcode": "^2.2.2",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
     "vuedraggable": "^2.24.3",
