--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^3.25.3",
     "cors": "^2.8.5",
     "element-ui": "^2.15.14",
+    "express": "^4.21.2",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "nuxt": "^2.15.8",
